Fix some of the broken layout issues

--- a/deeplearning4j/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/samediff/samediff.css
+++ b/deeplearning4j/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/samediff/samediff.css
@@ -1,9 +1,18 @@
 
+html, body {height: 100%; }
 
 .wrapper {
     display: flex;
     height: 100vh;
     align-items: stretch;
+}
+
+.sidebarline {
+    height: 2px;
+    width: 100%;
+    background-color: #212529;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 #samediffsidebar {
@@ -23,7 +32,7 @@
 }
 
 #findnoderesults {
-    width: 250px;
+    width: 100%;
     height: 160px;
     overflow:hidden;
     overflow-y:scroll;
